feat(): Assets, bump V2.2.0