@@ -1,23 +1,21 @@
 package com.giova.service.moneystats.crypto.asset;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.giova.service.moneystats.app.stats.StatsService;
 import com.giova.service.moneystats.app.wallet.WalletService;
 import com.giova.service.moneystats.app.wallet.dto.Wallet;
 import com.giova.service.moneystats.authentication.entity.UserEntity;
 import com.giova.service.moneystats.crypto.asset.database.AssetRepository;
-import com.giova.service.moneystats.crypto.asset.database.IAssetDAO;
 import com.giova.service.moneystats.crypto.asset.dto.Asset;
 import com.giova.service.moneystats.crypto.asset.entity.AssetEntity;
 import com.giova.service.moneystats.crypto.marketData.MarketDataService;
 import com.giova.service.moneystats.crypto.marketData.dto.MarketData;
+import com.giova.service.moneystats.utilities.Utils;
 import io.github.giovannilamarmora.utils.context.TraceUtils;
-import io.github.giovannilamarmora.utils.exception.UtilsException;
 import io.github.giovannilamarmora.utils.generic.Response;
 import io.github.giovannilamarmora.utils.interceptors.LogInterceptor;
 import io.github.giovannilamarmora.utils.interceptors.LogTimeTracker;
 import io.github.giovannilamarmora.utils.interceptors.Logged;
+import io.github.giovannilamarmora.utils.utilities.Utilities;
 import jakarta.transaction.Transactional;
 import java.time.LocalDate;
 import java.util.ArrayList;
@@ -30,6 +28,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.util.ObjectUtils;
 
 @Service
 @Logged
@@ -38,10 +37,7 @@ public class AssetService {
 
   private final Logger LOG = LoggerFactory.getLogger(this.getClass());
   private final UserEntity user;
-  private final ObjectMapper mapper = new ObjectMapper().findAndRegisterModules();
   @Autowired private WalletService walletService;
-  @Autowired private IAssetDAO assetDAO;
-  @Autowired private AssetMapper assetMapper;
   @Autowired private MarketDataService marketDataService;
   @Autowired private StatsService statsService;
 
@@ -55,6 +51,7 @@ public class AssetService {
    */
   @LogInterceptor(type = LogTimeTracker.ActionType.SERVICE)
   public ResponseEntity<Response> getAssetByIdentifier(String identifier) {
+    LOG.info("Getting asset {}", identifier);
     List<AssetEntity> assetEntities =
         assetRepository.findAllByIdentifierAndUserId(identifier, user.getId());
     List<Asset> assets;
@@ -89,6 +86,7 @@ public class AssetService {
    */
   @LogInterceptor(type = LogTimeTracker.ActionType.SERVICE)
   public ResponseEntity<Response> getAssets() {
+    LOG.info("Getting all assets");
     List<AssetEntity> assetEntities = assetRepository.findAllByUserIdOrderByRank(user.getId());
     List<Asset> assets = new ArrayList<>();
 
@@ -113,53 +111,129 @@ public class AssetService {
     return ResponseEntity.ok(response);
   }
 
+  /**
+   * Add a new Crypto Asset
+   *
+   * @param wallet to be updated
+   * @return Asset
+   */
   @LogInterceptor(type = LogTimeTracker.ActionType.SERVICE)
   @Transactional(value = Transactional.TxType.REQUIRED, rollbackOn = Exception.class)
-  public ResponseEntity<Response> insertOrUpdateAssets(List<Wallet> wallets)
-      throws UtilsException, JsonProcessingException {
-    StringBuilder message = new StringBuilder("Assets ");
-    List<Wallet> walletRes = new ArrayList<>();
+  public ResponseEntity<Response> addAsset(Wallet wallet) {
+    LOG.info(
+        "Add asset {} for wallet {}", wallet.getAssets().getLast().getName(), wallet.getName());
 
-    wallets.forEach(
-        wallet -> {
-          try {
-            ResponseEntity<Response> saveWallet = walletService.insertOrUpdateWallet(wallet);
-            message.append(wallet.getAssets().getLast().getName()).append(" ");
-            walletRes.add((Wallet) Objects.requireNonNull(saveWallet.getBody()).getData());
-          } catch (JsonProcessingException e) {
-            LOG.error("An Error happen during saving asset, message is {}", e.getMessage());
-            throw new AssetException(e.getMessage());
-          }
-        });
-    message.append("Successfully saved!");
+    Boolean isLiveWallet = Utils.isLiveWallet(null, user);
+
+    String message = "Asset " + wallet.getAssets().getLast().getName() + " Successfully saved!";
+
+    ResponseEntity<Response> saveWallet =
+        walletService.addOrUpdateWallet(wallet, isLiveWallet, message);
+
+    if (!ObjectUtils.isEmpty(saveWallet.getBody())) {
+      assetRepository.clearAllWalletsCache();
+    }
 
     Response response =
         new Response(
-            HttpStatus.OK.value(),
-            message.toString(),
-            TraceUtils.getSpanID(),
-            Objects.requireNonNull(walletRes));
+            HttpStatus.OK.value(), message, TraceUtils.getSpanID(), saveWallet.getBody().getData());
     return ResponseEntity.ok(response);
   }
 
+  /**
+   * Update a Crypto Asset
+   *
+   * @param wallet to be updated
+   * @return Asset
+   */
   @LogInterceptor(type = LogTimeTracker.ActionType.SERVICE)
   @Transactional(value = Transactional.TxType.REQUIRED, rollbackOn = Exception.class)
-  public ResponseEntity<Response> insertOrUpdateAsset(Wallet wallet)
-      throws UtilsException, JsonProcessingException {
+  public ResponseEntity<Response> updateAsset(Wallet wallet) {
+    LOG.info(
+        "Update asset {} for wallet {}", wallet.getAssets().getLast().getName(), wallet.getName());
 
-    ResponseEntity<Response> saveWallet = walletService.insertOrUpdateWallet(wallet);
+    Boolean isLiveWallet = Utils.isLiveWallet(null, user);
 
-    String message =
-        "Asset "
-            + wallet.getAssets().get(wallet.getAssets().size() - 1).getName()
-            + " Successfully saved!";
+    String message = "Asset " + wallet.getAssets().getLast().getName() + " Successfully updated!";
+
+    ResponseEntity<Response> saveWallet =
+        walletService.addOrUpdateWallet(wallet, isLiveWallet, message);
+
+    if (!ObjectUtils.isEmpty(saveWallet.getBody())) {
+      assetRepository.clearAllWalletsCache();
+    }
 
     Response response =
         new Response(
-            HttpStatus.OK.value(),
-            message,
-            TraceUtils.getSpanID(),
-            Objects.requireNonNull(saveWallet.getBody()).getData());
+            HttpStatus.OK.value(), message, TraceUtils.getSpanID(), saveWallet.getBody().getData());
+    return ResponseEntity.ok(response);
+  }
+
+  /**
+   * Add a new Crypto Asset
+   *
+   * @param wallets to be updated
+   * @return Asset
+   */
+  @LogInterceptor(type = LogTimeTracker.ActionType.SERVICE)
+  @Transactional(value = Transactional.TxType.REQUIRED, rollbackOn = Exception.class)
+  public ResponseEntity<Response> addAssets(List<Wallet> wallets) {
+    LOG.info("Add assets list started");
+    StringBuilder message = new StringBuilder("Assets ");
+    List<Wallet> walletRes = new ArrayList<>();
+
+    Boolean isLiveWallet = Utils.isLiveWallet(null, user);
+
+    wallets.forEach(
+        wallet -> {
+          ResponseEntity<Response> saveWallet =
+              walletService.addOrUpdateWallet(wallet, isLiveWallet, null);
+          message.append(wallet.getAssets().getLast().getName()).append(" ");
+          if (!Utilities.isNullOrEmpty(saveWallet.getBody()))
+            walletRes.add((Wallet) Objects.requireNonNull(saveWallet.getBody()).getData());
+        });
+    message.append("Successfully saved!");
+
+    if (!Utilities.isNullOrEmpty(walletRes)) {
+      assetRepository.clearAllWalletsCache();
+    }
+
+    Response response =
+        new Response(HttpStatus.OK.value(), message.toString(), TraceUtils.getSpanID(), walletRes);
+    return ResponseEntity.ok(response);
+  }
+
+  /**
+   * Update a Crypto Assets
+   *
+   * @param wallets to be updated
+   * @return Asset
+   */
+  @LogInterceptor(type = LogTimeTracker.ActionType.SERVICE)
+  @Transactional(value = Transactional.TxType.REQUIRED, rollbackOn = Exception.class)
+  public ResponseEntity<Response> updateAssets(List<Wallet> wallets) {
+    LOG.info("Update assets list started");
+    StringBuilder message = new StringBuilder("Assets ");
+    List<Wallet> walletRes = new ArrayList<>();
+
+    Boolean isLiveWallet = Utils.isLiveWallet(null, user);
+
+    wallets.forEach(
+        wallet -> {
+          ResponseEntity<Response> saveWallet =
+              walletService.addOrUpdateWallet(wallet, isLiveWallet, null);
+          message.append(wallet.getAssets().getLast().getName()).append(" ");
+          if (!Utilities.isNullOrEmpty(saveWallet.getBody()))
+            walletRes.add((Wallet) Objects.requireNonNull(saveWallet.getBody()).getData());
+        });
+    message.append("Successfully updated!");
+
+    if (!Utilities.isNullOrEmpty(walletRes)) {
+      assetRepository.clearAllWalletsCache();
+    }
+
+    Response response =
+        new Response(HttpStatus.OK.value(), message.toString(), TraceUtils.getSpanID(), walletRes);
     return ResponseEntity.ok(response);
   }
 }
